FIX - word-wrap css test

--- a/index/css/base.css
+++ b/index/css/base.css
@@ -845,6 +845,7 @@ nav {
     justify-content: center;
     margin: 5px;
     padding: 5px;
+    word-wrap: break-word;
 }
 
 .other-chat {
